fix: overflow when there are too many items in on-chain assets

--- a/app/src/pages/chat/OnChainAssetWidget/index.less
+++ b/app/src/pages/chat/OnChainAssetWidget/index.less
@@ -3,6 +3,7 @@
   position: fixed;
   top: 70%;
   width: 100%;
+  overflow: hidden;
   z-index: 999;
   display: flex;
   background-color: rgba(255, 255, 255, 0.3);
@@ -14,7 +15,7 @@
 
 .asset {
   margin: 10px 5px;
-  width: 150px;
+  width: 130px;
   border-radius: 10px;
   justify-content: center;
   align-content: center;
@@ -31,7 +32,6 @@
 .asset_info {
 
 }
-
 
 .coin_root {
   position: absolute;
